Fixing align issues
 - Align issues

Related work items: #1629, #1604

--- a/client/app/factories/AlertMessage/AlertMessage.less
+++ b/client/app/factories/AlertMessage/AlertMessage.less
@@ -31,6 +31,9 @@
                 padding-left: 17px;
             }
         }
+        td{
+          text-align: left;
+        }
     }
 
     .modal-hs{
@@ -75,13 +78,13 @@
             background: @lightgray;
             font-family: BrandonRegular;
             padding-top: 15px;
-            padding-left: 18px;
+            padding-left: 8px;
         }
         caption{
             text-align: left;
             font-weight: bold;
             padding-top: 15px;
-            padding-left: 18px;
+            padding-left: 8px;
         }
         thead  tr th{
             font-size: 14px;
