--- a/client/app/less/al/misc.less
+++ b/client/app/less/al/misc.less
@@ -173,7 +173,6 @@
         color: #666;
         line-height: 49px;
         text-align: center;
-        margin-top: 15%;
     }
     .sortColumn:hover {
         cursor: pointer;
